--- a/public/stylesheets/prove01.css
+++ b/public/stylesheets/prove01.css
@@ -7,6 +7,25 @@ form {
  margin: auto; 
 }
 
+.bookList {
+  text-align: left;
+  font-size: large;
+  list-style: none;
+}
+
+.bookList li {
+  border-radius: 10px;
+  box-shadow: grey 5px 5px;
+  border: 1px solid whitesmoke;
+  padding: 10px 20px;
+  margin: 20px auto;
+}
+
+.title {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .flex-row {
   margin-bottom: 20px;
   display: flex;
@@ -19,13 +38,17 @@ label {
   padding: 0px 10px;
 }
 
-input {
+input, textarea {
   border-radius: 5px;
   display: inline-block;
   height: 40px;
   width: 100%;  
   color: black;  
   padding: 10px;
+}
+
+textarea {
+  min-height: 100px;
 }
 
 button {
@@ -52,3 +75,14 @@ button {
 .col1 { 
   text-align: right;
 }
+
+.indent {
+  margin-left: 30px;
+}
+
+.active {
+  text-decoration: underline;
+  font-weight: bold;
+  color: maroon;
+}
+
