restructured the file system; week 3

--- a/views/pages/proveAssignments/prove02-result.ejs
+++ b/views/pages/proveAssignments/prove02-result.ejs
@@ -1,4 +1,4 @@
-<% include ../includes/prove02-header.ejs %>             
+<% include ../../includes/proveAssignments/prove02-header.ejs %>             
 <% if (books.length > 0) { %>  
   <ul class="bookList">
     <% for(let b of books) { %>
@@ -13,5 +13,5 @@
 <% } else { %>
   <h2>No books found</h2> 
 <% } %> 
-<% include ../includes/prove02-footer.ejs %>
+<% include ../../includes/proveAssignments/prove02-footer.ejs %>
 
