--- a/views/pages/proveAssignments/prove02.ejs
+++ b/views/pages/proveAssignments/prove02.ejs
@@ -1,5 +1,5 @@
-<% include ../includes/prove02-header.ejs %>              
-      <form action="/prove02/booklist" method="POST">       
+<% include ../../includes/proveAssignments/prove02-header.ejs %>              
+      <form action="../proveAssignments/02/booklist" method="POST">       
         <div class="flex-row">
           <label for="booktitle">Book Title</label>
           <input type="text" id="booktitle" name="booktitle" placeholder="Title">                
@@ -14,5 +14,5 @@
         </div>
         <button type="submit">Submit</button>
       </form>      
-<% include ../includes/prove02-footer.ejs %>
+<% include ../../includes/proveAssignments/prove02-footer.ejs %>
 
