--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,15 +8,17 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Team Activities <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li class="<%= path === '/ta01' ? 'active' : ''%>"><a href="/ta01">TA01</a></li>
-            <li class="<%= path === '/ta03' ? 'active' : ''%>"><a href="/ta03">TA03</a></li>
-            <li class="<%= path === '/ta04' ? 'active' : ''%>"><a href="/ta04">TA04</a></li>
+            <li class="<%= path === 'teamActivities/01' ? 'active' : ''%>"><a href="teamActivities/01">TA01</a></li>
+            <li class="<%= path === 'teamActivities/02' ? 'active' : ''%>"><a href="teamActivities/02">TA02</a></li>
+            <li class="<%= path === 'teamActivities/03' ? 'active' : ''%>"><a href="teamActivities/03">TA03</a></li>
+            <li class="<%= path === 'teamActivities/04' ? 'active' : ''%>"><a href="teamActivities/04">TA04</a></li>
           </ul>
       </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Prove Activities <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li class="<%= path === '/prove01' ? 'active' : ''%>"><a href="/prove01">Prove 01</a></li>            
+            <li class="<%= path === 'proveAssignments/02' ? 'active' : ''%>"><a href="proveAssignments/02">Prove 02</a></li>            
           </ul>
       </li>
     </ul>
