typo in carousel

--- a/views/Beemazon/includes/carousel.ejs
+++ b/views/Beemazon/includes/carousel.ejs
@@ -7,7 +7,7 @@
     <% products.forEach(p => { %>
     <li>
       <a href="/beemazon/shop/products/item/<%= p.id %>">
-        <img class="item-image" src="/images/beemazon/<%= p.imageUrl %>" alt="<%= p.title %>">        
+        <img class="item-image" src="/images/Beemazon/<%= p.imageUrl %>" alt="<%= p.title %>">        
       </a>
     </li>
     <% }) %>
