--- a/views/Beemazon/pages/shop/orders.ejs
+++ b/views/Beemazon/pages/shop/orders.ejs
@@ -1,9 +1,37 @@
 <%- include('../../includes/head.ejs') %>
+<link rel="stylesheet" href="/stylesheets/Beemazon/order.css">
     </head>
 
     <body>
         <%- include('../../includes/navigation.ejs') %>
         <main>
-            <h1>Nothing there!</h1>
+            <h1><%= pageTitle %></h1>
+            <% if (orders.length <= 0 ) { %>
+                <h2>No orders found</h2>
+            <% } else { %>
+                <ul class="container">
+                    <% orders.forEach(o => { %>
+                    <li class="order__item">
+                        <% let total = 0.0 %>
+                        <h2>Order - #<%= o._id %></h2>
+                        <ul class="order__products">
+                            <% o.products.forEach(p => { %>
+                                <li class="product">
+                                    <div>
+                                     <%= p.item.title %> (<%= p.quantity %>)
+                                    </div>
+                                    <div>
+                                     $<%= p.item.price.toFixed(2) %> each
+                                    </div>
+                                    <% total += p.item.price * p.quantity %>
+                                </li>
+                            <% }) %>
+                        </ul>
+                        <hr>
+                        <h3>Total: $<%= total.toFixed(2) %></h2>
+                    </li>
+                    <% }) %>
+                </ul>
+            <% } %>
         </main>
         <%- include('../../includes/end.ejs') %>
