--- a/views/Beemazon/pages/shop/product-detail.ejs
+++ b/views/Beemazon/pages/shop/product-detail.ejs
@@ -6,9 +6,9 @@
     <%- include('../../includes/navigation.ejs') %>
     <main class="container">
         <h1 class="card__header"><%= product.title %></h1>        
-        <h2 id="price">$<%= product.price %></h2>
+        <h2 id="price">$<%= product.price.toFixed(2) %></h2>
         <div class="card__image">
-            <img src="/images/Beemazon/<%= product.imageUrl %>" alt="<%= product.title %>">
+            <img <%- include('../../includes/imageSource.ejs', {imageUrl: product.imageUrl}) %> alt="<%= product.title %>">
         </div>        
         <p class="card__description"><%= product.description %></p>
         <% if(product.options.title !== "" && product.options.list.length > 0) { %>
