--- a/public/stylesheets/Beemazon/nav.css
+++ b/public/stylesheets/Beemazon/nav.css
@@ -75,3 +75,68 @@ body {
 .main-header_list a.active {
   color: #ffeb3b;  
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: rgb(41, 41, 41); ;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 5px 5px;
+  z-index: 1;
+  left: 0px;
+  top: 32px;  
+}
+
+.triangle {
+  border-bottom: 4px solid white;
+  border-left: 4px solid rgba(255,255,255,0);
+  border-right: 4px solid rgba(255,255,255,0);
+  content: "";
+  display: inline-block;
+  height: 0;
+  vertical-align: center;
+  width: 0;
+  transform: rotate(180deg);  
+  margin: 0px 3px;
+  padding-top: 2px;
+}
+
+.dropdown:hover .dropdown-menu,
+.dropdown-menu:hover .dropdown-menu {
+  display: block;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.25rem 1rem;
+  text-decoration: none;
+  font: inherit;
+  border: 1px solid goldenrod;
+  color: goldenrod;
+  background: white;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: goldenrod;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
+  color: white;
+}
