--- a/views/Beemazon/includes/navigation.ejs
+++ b/views/Beemazon/includes/navigation.ejs
@@ -16,6 +16,13 @@
             <li class="main-header__item">
                 <a class="<%= path === '/orders' ? 'active' : '' %>" href="/beemazon/shop/orders">Orders</a>
             </li>                                 
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle <%= path.includes('admin/') ? 'active' : '' %>" data-toggle="dropdown" role="button" aria-expanded="false"> Seller <span class="triangle"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a class="<%= path === '/admin/products' ? 'active' : ''%>" href="/beemazon/admin/products">Product List</a></li>
+                    <li><a class="<%= path === '/admin/add-product' ? 'active' : ''%>" href="/beemazon/admin/add-product">Add Product</a></li>                                        
+                </ul>
+            </li>                               
         </ul>
     </nav>
 </header>
