--- a/views/Beemazon/pages/admin/products.ejs
+++ b/views/Beemazon/pages/admin/products.ejs
@@ -1,5 +1,5 @@
 <%- include('../../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/stylesheets/Beemazon/product.css">
     </head>
 
     <body>
@@ -16,7 +16,7 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                    <img <%- include('../../includes/imageSource.ejs', {imageUrl: product.imageUrl}) %> alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
                                     <h2 class="product__price">$
@@ -27,9 +27,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
-                                        <input type="hidden" value="<%= product.id %>" name="productId">
+                                    <a href="/beemazon/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
+                                    <form action="/beemazon/admin/delete-product" method="POST">
+                                        <input type="hidden" value="<%= product._id %>" name="productId">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
 
