--- a/views/Beemazon/pages/shop/product-list.ejs
+++ b/views/Beemazon/pages/shop/product-list.ejs
@@ -15,11 +15,11 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="/images/Beemazon/<%= product.imageUrl %>" alt="<%= product.title %>">
+                                    <img <%- include('../../includes/imageSource.ejs', {imageUrl: product.imageUrl}) %> alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">                                    
                                     <h2 class="product__price">$
-                                        <%= product.price %>
+                                        <%= product.price.toFixed(2) %>
                                     </h2>                                    
                                     <p class="product__description">
                                         <%= product.description %>
