--- a/views/Beemazon/includes/navigation.ejs
+++ b/views/Beemazon/includes/navigation.ejs
@@ -2,7 +2,14 @@
     <nav class="main-header_nav dark">
         <ul class="main-header_list nav-icon-list">
             <li><a href="/beemazon/shop"><img class="nav-icon" id="beemazon" src="/images/Beemazon/smalllogo.png" alt="Beemazon"></a></li>                                            
-            <li><a href="/beemazon/shop/cart"><img class="nav-icon" id="cart" src="/images/Beemazon/yellowcart.png" alt="Cart"></a></li>
+            <div class="main-header_list">
+                <% if (isAuthenticated) { %>    
+                    <li><a href="/beemazon/admin/products">userName</a></li>
+                    <li><a href="/beemazon/shop/cart"><img class="nav-icon" id="cart" src="/images/Beemazon/yellowcart.png" alt="Cart"></a></li>
+                <% } else { %>                    
+                    <li><a href="/beemazon/auth/login"><img class="nav-icon" id="cart" src="/images/Beemazon/yellowcart.png" alt="Cart"></a></li>
+                <% } %>                         
+            </div>            
         </ul>        
     </nav>
     <nav class="main-header_nav lighter">
@@ -13,9 +20,10 @@
             <li class="main-header__item">
                 <a class="<%= path === '/products' ? 'active' : '' %>" href="/beemazon/shop">Products</a>
             </li>       
+            <% if (isAuthenticated) { %>    
             <li class="main-header__item">
                 <a class="<%= path === '/orders' ? 'active' : '' %>" href="/beemazon/shop/orders">Orders</a>
-            </li>                                 
+            </li>                                         
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle <%= path.includes('admin/') ? 'active' : '' %>" data-toggle="dropdown" role="button" aria-expanded="false"> Seller <span class="triangle"></span></a>
                 <ul class="dropdown-menu" role="menu">
@@ -23,6 +31,24 @@
                     <li><a class="<%= path === '/admin/add-product' ? 'active' : ''%>" href="/beemazon/admin/add-product">Add Product</a></li>                                        
                 </ul>
             </li>                               
+            <% } %>                          
+        </ul>
+        <ul class="main-header_list right">                        
+            <% if (!isAuthenticated) { %>
+                <li class="main-header__item">
+                    <a class="<%= path === '/login' ? 'active' : '' %>" href="/beemazon/auth/login">Login</a>
+                </li>       
+                <li class="main-header__item">
+                    <a class="<%= path === '/signup' ? 'active' : '' %>" href="/beemazon/auth/signup">New Account</a>
+                </li>                                 
+            <% } else { %>
+                <li class="main-header__item">
+                    <form action="/logout" method="POST">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <button type="submit">Logout</button>
+                    </form>
+                </li>       
+            <% } %>            
         </ul>
     </nav>
 </header>
