--- a/views/Beemazon/pages/auth/login.ejs
+++ b/views/Beemazon/pages/auth/login.ejs
@@ -1,22 +1,25 @@
 <%- include('../../includes/head.ejs') %>    
-    <link rel="stylesheet" href="/stylesheets/Beemazon/editProduct.css">
+  <link rel="stylesheet" href="/stylesheets/Beemazon/auth.css">
 </head>
 
 <body>
    <%- include('../../includes/navigation.ejs') %>
 
-    <main>        
-        <form class="container" action="/beemazon/auth/login" method="POST">
-            <h2><%= pageTitle %></h2>
-            <div class="data-row">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
-            </div>
-            <div class="data-row">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
-            <button class="btn" type="submit">Login</button>
+    <main>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
+        <form class="login-form" action="/login" method="POST">          
+          <div class="form-control">
+              <label for="email">E-Mail</label>
+              <input type="email" name="email" id="email">
+          </div>
+          <div class="form-control">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password">
+          </div>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+          <button class="btn" type="submit">Login</button>
         </form>
     </main>
 <%- include('../../includes/end.ejs') %>
