--- a/views/Beemazon/pages/admin/edit-product.ejs
+++ b/views/Beemazon/pages/admin/edit-product.ejs
@@ -7,6 +7,7 @@
 
     <main>        
         <form class="container" action="/beemazon/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <h2><%= pageTitle %></h2>
             <div class="data-row">
                 <label for="title">Title</label>
