--- a/views/Beemazon/pages/auth/signup.ejs
+++ b/views/Beemazon/pages/auth/signup.ejs
@@ -5,29 +5,22 @@
 <body>
     <%- include('../../includes/navigation.ejs') %>
 
-    <main>
+    <main class="container">
+        <h2><%= pageTitle %></h2>
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="login-form" action="/signup" method="POST">
-            <div class="form-control">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name">
-            </div>
-            <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-            </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
-            <div class="form-control">
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
-            </div>
+        <form class="grid" action="/beemazon/auth/signup" method="POST">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name">
+            <label for="email">E-Mail</label>
+            <input type="email" name="email" id="email">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" name="confirmPassword" id="confirmPassword">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Register</button>
+            <button class="btn gapped full-span" type="submit">Register</button>
         </form>
     </main>
 <%- include('../../includes/end.ejs') %>
