--- a/views/Beemazon/pages/shop/product-detail.ejs
+++ b/views/Beemazon/pages/shop/product-detail.ejs
@@ -22,7 +22,7 @@
             </div>
         <% } %>        
         <div class="card__actions">
-            <%- include('../../includes/add-to-cart.ejs') %>
+            <%- include('../../includes/add-to-cart.ejs', {csrfToken: csrfToken, product: product}) %>
         </div>
     </main>
     <%- include('../../includes/end.ejs') %>
