--- a/views/Beemazon/pages/shop/product-list.ejs
+++ b/views/Beemazon/pages/shop/product-list.ejs
@@ -27,7 +27,7 @@
                                 </div>                               
                                 <div class="card__actions">
                                     <a href="/beemazon/shop/products/item/<%= product._id %>" class="btn">Details</a>
-                                    <%- include('../../includes/add-to-cart.ejs', {product: product}) %>
+                                    <%- include('../../includes/add-to-cart.ejs', {product: product, csrfToken: csrfToken}) %>
                                 </div>
                             </article>
                             <% } %>
