--- a/views/Beemazon/pages/500.ejs
+++ b/views/Beemazon/pages/500.ejs
@@ -1,5 +1,5 @@
-  <% include ../includes/head.ejs %>
-  <link rel="stylesheet" href="/stylesheets/Beemazon/error.css">
+<% include ../includes/head.ejs %>
+<link rel="stylesheet" href="/stylesheets/Beemazon/error.css">
 </head>
 
 <body>
@@ -7,12 +7,11 @@
 <main>
   <div class="container">
     <h1><%= pageTitle %></h1>
-    <p>The page you're looking for doesn't seem to exist.</p>  
+    <p>We're looking into fixing this issue. Please bee patient.</p>    
     <div class="img-container">
       <img class="watermark" src='images/Beemazon/bee.png' alt='A Bee'>  
     </div>
   </div>
 </main>
-
 
 <% include ../includes/end.ejs %>
