--- a/views/Beemazon/pages/auth/login.ejs
+++ b/views/Beemazon/pages/auth/login.ejs
@@ -1,22 +1,34 @@
 <%- include('../../includes/head.ejs') %>    
   <link rel="stylesheet" href="/stylesheets/Beemazon/auth.css">
+  <link rel="stylesheet" href="/stylesheets/Beemazon/validation.css">
 </head>
 
 <body>
    <%- include('../../includes/navigation.ejs') %>
 
     <main class="container">
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% if (errorMessage.length > 0) { %>
+            <div class="user-message user-message--error">
+                <% errorMessage.forEach( x => { %>
+                    <p><%= x.msg %></p>
+                <% }) %>                
+            </div>
         <% } %>
         <form class="grid" action="/beemazon/auth/login" method="POST">          
             <label for="email">E-Mail</label>
-            <input type="email" name="email" id="email">
+            <input 
+                class="<%= errorMessage.find(e => e.param === 'email') ? 'invalid' : '' %>"
+                type="email" name="email" id="email" value="<%= oldInput.email %>">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input 
+                class="<%= errorMessage.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                type="password" name="password" id="password" value="<%= oldInput.password %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn gapped full-span" type="submit">Login</button>          
         </form>
-        <a class="gapped" href="/beemazon/auth/signup">New to Beemazon?</a>
+        <div class="gapped">
+            <a href="/beemazon/auth/signup">New to Beemazon?</a>
+            <a href="/beemazon/auth/reset">Forgot Password?</a>
+        </div>
     </main>
 <%- include('../../includes/end.ejs') %>
