--- a/views/Beemazon/pages/auth/signup.ejs
+++ b/views/Beemazon/pages/auth/signup.ejs
@@ -1,5 +1,6 @@
 <%- include('../../includes/head.ejs') %>        
     <link rel="stylesheet" href="/stylesheets/Beemazon/auth.css">
+    <link rel="stylesheet" href="/stylesheets/Beemazon/validation.css">
 </head>
 
 <body>
@@ -7,18 +8,30 @@
 
     <main class="container">
         <h2><%= pageTitle %></h2>
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% if (errorMessage.length > 0) { %>
+            <div class="user-message user-message--error">
+                <% errorMessage.forEach( x => { %>
+                    <p><%= x.msg %></p>
+                <% }) %>
+            </div>
         <% } %>
         <form class="grid" action="/beemazon/auth/signup" method="POST">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name">
+            <input 
+                class="<%= errorMessage.find(e => e.param === 'name') ? 'invalid' : '' %>"
+                type="text" name="name" id="name" value="<%= oldInput.name %>">
             <label for="email">E-Mail</label>
-            <input type="email" name="email" id="email">
+            <input 
+                class="<%= errorMessage.find(e => e.param === 'email') ? 'invalid' : '' %>"
+                type="email" name="email" id="email" value="<%= oldInput.email %>">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input 
+                class="<%= errorMessage.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                type="password" name="password" id="password" value="<%= oldInput.password %>">
             <label for="confirmPassword">Confirm Password</label>
-            <input type="password" name="confirmPassword" id="confirmPassword">
+            <input 
+                class="<%= errorMessage.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>"
+                type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn gapped full-span" type="submit">Register</button>
         </form>
