--- a/views/Beemazon/pages/auth/new-password.ejs
+++ b/views/Beemazon/pages/auth/new-password.ejs
@@ -1,5 +1,6 @@
 <%- include('../../includes/head.ejs') %>    
   <link rel="stylesheet" href="/stylesheets/Beemazon/auth.css">
+  <link rel="stylesheet" href="/stylesheets/Beemazon/validation.css">
 </head>
 
 <body>
@@ -7,12 +8,18 @@
 
     <main class="container">
         <h1><%= pageTitle %></h1>
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>
+        <% if (errorMessage.length > 0) { %>
+            <div class="user-message user-message--error">
+                <% errorMessage.forEach( x => { %>
+                    <p><%= x.msg %></p>
+                <% }) %>                
+            </div>
+        <% } %>   
         <form class="grid" action="/beemazon/auth/new-password" method="POST">                     
             <label for="password">New Password</label>
-            <input type="password" name="password" id="password">
+            <input 
+                class="<%= errorMessage.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                type="password" name="password" id="password" value="<%= password %>">
             <input type="hidden" name="userId" value="<%= userId %>">
             <input type="hidden" name="pwdToken" value="<%= pwdToken %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
