--- a/views/Beemazon/pages/auth/reset.ejs
+++ b/views/Beemazon/pages/auth/reset.ejs
@@ -1,5 +1,6 @@
 <%- include('../../includes/head.ejs') %>    
   <link rel="stylesheet" href="/stylesheets/Beemazon/auth.css">
+  <link rel="stylesheet" href="/stylesheets/Beemazon/validation.css">
 </head>
 
 <body>
