--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -20,7 +20,7 @@
             <li class="<%= path === 'proveAssignments/02' ? 'active' : ''%>"><a href="/proveAssignments/02">Prove 02</a></li>            
           </ul>
       </li>
-      <li><a href="/beemazon" style="padding: 0 2rem; margin: 0"><img id="beemazon" src="/images/Beemazon/smalllogo.png" alt="Beemazon"></a></li>      
+      <li><a href="/beemazon/shop" style="padding: 0 2rem; margin: 0"><img id="beemazon" src="/images/Beemazon/smalllogo.png" alt="Beemazon"></a></li>      
     </ul>
   </div>
 </nav>
