--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -18,6 +18,8 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Prove Activities <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">            
             <li class="<%= path === 'proveAssignments/02' ? 'active' : ''%>"><a href="/proveAssignments/02">Prove 02</a></li>            
+            <li class="<%= path === 'proveAssignments/08' ? 'active' : ''%>"><a href="/proveAssignments/08">Prove 08</a></li>            
+            <li class="<%= path === 'proveAssignments/09' ? 'active' : ''%>"><a href="/proveAssignments/09">Prove 09</a></li>            
           </ul>
       </li>
       <li><a href="/beemazon/shop" style="padding: 0 2rem; margin: 0"><img id="beemazon" src="/images/Beemazon/smalllogo.png" alt="Beemazon"></a></li>      
