--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -47,3 +47,19 @@
   width: auto;
   margin: 5px 10px 0px 10px;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 20px;
+}
+
+.spaced {
+  margin: 10px;
+}
+
+.large {
+  font-size: larger;
+}
