--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -20,6 +20,8 @@
             <li class="<%= path === 'proveAssignments/02' ? 'active' : ''%>"><a href="/proveAssignments/02">Prove 02</a></li>            
             <li class="<%= path === 'proveAssignments/08' ? 'active' : ''%>"><a href="/proveAssignments/08">Prove 08</a></li>            
             <li class="<%= path === 'proveAssignments/09' ? 'active' : ''%>"><a href="/proveAssignments/09">Prove 09</a></li>            
+            <li class="<%= path === 'proveAssignments/10' ? 'active' : ''%>"><a href="/proveAssignments/10">Prove 10</a></li>            
+            <li class="<%= path === 'proveAssignments/11' ? 'active' : ''%>"><a href="/proveAssignments/11">Prove 11</a></li>            
           </ul>
       </li>
       <li><a href="/beemazon/shop" style="padding: 0 2rem; margin: 0"><img id="beemazon" src="/images/Beemazon/smalllogo.png" alt="Beemazon"></a></li>      
